--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -216,6 +216,11 @@
     }
     .hamburger-menu {
       display: block;
+      -webkit-user-select:none;
+      -moz-user-select:none;
+      -ms-user-select:none;
+      -o-user-select:none;
+      user-select:none;
     }
   }
     
