--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -5,6 +5,34 @@
     padding-right: 10vh;
     padding-top: 10vh;
     gap: 10vh;
+    justify-content: space-evenly
+}
+
+.img{
+    width: 100%;
+    height: 100%;
+    caret-color: transparent;
+}
+
+.projs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    padding-left: 10vh;
+    padding-right: 10vh;
+    padding-top: 10vh;
+    gap: 10vh;
+    padding-bottom: 10vh;
+}
+
+.basicprojects{
+    padding-top: 5%;
+    font-weight: bolder;
+    font-size: xx-large;
+    font-family: "Comic Sans MS", "Comic Sans", "cursive";
+    padding-left: 40%;
+    color: rgb(170, 245, 245);
 }
 
 .proj > * {
@@ -14,13 +42,12 @@
 .ex1{
     box-shadow: 0 4px 8px 0 rgba(241, 245, 6, 0.986);
     padding: 2vh;
-    background-color: rgb(46, 43, 43);
+    background-color: rgb(49, 46, 46);
 }
-
-.ex2{
-    box-shadow: 0 4px 8px 0 rgba(248, 252, 5, 0.938);
+.ex3{
+    box-shadow: 0 4px 8px 0 rgba(241, 245, 6, 0.986);
     padding: 2vh;
-    background-color: rgb(46, 43, 43);
+    background-color: rgb(173, 119, 119);
 }
 .title{
     font-family: "Comic Sans MS", "Comic Sans", "cursive";
@@ -32,6 +59,15 @@
     caret-color: transparent;
 }
 
+.projname{
+    font-family: "Comic Sans MS", "Comic Sans", "cursive";
+    border-radius: 5px;
+    font-size: x-large;
+    padding: 10px;
+    align-items: center;
+    color: rgb(239, 243, 239);
+    caret-color: transparent;
+}
 .des{
     font-family: "Comic Sans MS", "Comic Sans", "cursive";
     color: rgb(238, 195, 223);
